--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <h1>Robud</h1>
         <h2>McGill Robotics: ROBOHACKS 2016</h2>
         <h3>Project Overview</h3>
-        <p>A social interactive robot friend who will follow you no matter what and talk to you!</p>
+        <p>A social interactive robot friend who will follow you no matter what and talk to you! </p>
         <h3>Meet the Team</h3>
-        <p>Hira, Venus, Nusruth, Betsy</p>
+        <p>Hira, Venus, Nusruth, Betsy <img src = "/Users/a14libb/Documents/RoboHacks Azure/octolax.png" height="300" width="300" align = "right"></p>
+        <p></p>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
