--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3>Project Overview</h3>
         <p>A social interactive robot friend who will follow you no matter what and talk to you! </p>
         <h3>Meet the Team</h3>
-        <p>Hira, Venus, Nusruth, Betsy <img src = "/Users/a14libb/Documents/RoboHacks Azure/octolax.png" height="300" width="300" align = "right"></p>
+        <p>Hira, Venus, Nusruth, Betsy <img src = "https://raw.githubusercontent.com/14libb/RoboHacks-Azure/master/octolax.png" height="300" width="300" align = "right"></p>
         <p></p>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
