image update position

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>Robud uses an Arduino microcontroller to interface with 4 toy DC motors and the electronics bay, which consists of a motor driver, ultrasonic range finder, and photoresistors. The original idea for Robud was for Robud to be a robot that would follow its user around using a GPS coordinate and randomly send texts to socially interact with its user. After working on the project, Robud is able to follow, under the assumption that there is one person, and detects that one person using photoresistors, assuming that there are bright lights that identify the user. Robud uses Twilio to send SMS from a select phrase bank and hopefully will expand or even be intelligently responsive.</p>
         <h3>Meet the Team</h3>
         <p>Hira, Venus, Nusruth, Betsy </p>
-        <p><img src = "https://raw.githubusercontent.com/14libb/RoboHacks-Azure/master/logo.png" height="300" width="400" align = "left"><img src = "https://raw.githubusercontent.com/14libb/RoboHacks-Azure/master/robud.jpg" height="300" width="400" align = "center"><img src = "https://raw.githubusercontent.com/14libb/RoboHacks-Azure/master/octolax.png" height="300" width="300" align = "right"></p>
+        <h2><img src = "https://raw.githubusercontent.com/14libb/RoboHacks-Azure/master/logo.png" height="300" width="400" align = "left"><img src = "https://raw.githubusercontent.com/14libb/RoboHacks-Azure/master/robud.jpg" height="300" width="400" align = "center"><img src = "https://raw.githubusercontent.com/14libb/RoboHacks-Azure/master/octolax.png" height="300" width="400" align = "right"></h2>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
